Refactor: replace dureeMax with configurable maxRetention property in LogsListener
- Introduced `abes.in-memory.max-retention` property in `application.properties`.
- Refactored `freeObsoleteFromMap` to use the new configurable property.
- Updated Kafka topic name to `topic.name.source.logs` for consistency.
- Improved `createFileBad` to return a `boolean` for better usage control.
- Enhanced logging and synchronized packet processing in `saveLogsInES`.